--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "chef-core",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "chef-js core functionalities",
   "main": "index.js",
   "types": "./dist/index.d.ts",
-  "files": ["dist", "chat.js"],
+  "files": [
+    "dist",
+    "chat.js"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "jest"
