--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "chef-core",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "chef-js core functionalities",
   "main": "index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
     "chat.js"
+  ],
+  "keywords": [
+    "nodejs",
+    "javascript",
+    "cli",
+    "framework",
+    "typescript",
+    "nodejs-server"
   ],
   "scripts": {
     "build": "tsc",
