--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chef-core",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "chef-js core functionalities",
   "main": "index.js",
   "types": "./dist/index.d.ts",
@@ -26,18 +26,20 @@
     "prebuild": "rm -rf dist",
     "build": "tsc",
     "test": "jest",
-    "precommit": "yarn build && npx prettier . --write"
+    "precommit": "yarn build && prettier . --write"
   },
   "repository": "git://github.com/chef-js/core.git",
   "author": "Jacek Pietal <Prozi>",
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "mime-types": "^2.1.34"
+    "mime-types": "^2.1.35"
   },
   "devDependencies": {
-    "@types/node": "^17.0.17",
-    "jest": "^27.5.1",
-    "typescript": "^4.5.5"
+    "@types/mime-types": "^2.1.1",
+    "@types/node": "^17.0.31",
+    "jest": "^28.1.0",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.4"
   }
 }
