--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chef-core",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "chef-js core functionalities",
   "main": "index.js",
   "types": "./dist/index.d.ts",
@@ -33,13 +33,14 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "latermom": "^2.0.1",
     "mime-types": "^2.1.35"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.1",
-    "@types/node": "^18.6.1",
-    "jest": "^28.1.3",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
+    "@types/node": "^18.14.0",
+    "jest": "^29.4.3",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5"
   }
 }
