--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chef-core",
-  "version": "3.0.5",
+  "version": "3.0.6",
   "description": "chef-js core functionalities",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -33,16 +33,25 @@
   "author": "Jacek Pietal <Prozi>",
   "license": "MIT",
   "private": false,
+  "resolutions": {
+    "@babel/traverse": ">=7.23.2",
+    "minimist": "^1.2.6",
+    "terser": "^5.14.2",
+    "json5": "^2.2.2",
+    "semver": "^7.5.3",
+    "escodegen": "^2.1.0",
+    "express": "^4.19.2"
+  },
   "dependencies": {
-    "latermom": "^2.0.1",
+    "@pietal.dev/cache": "^2.0.2",
     "mime-types": "^2.1.35"
   },
   "devDependencies": {
-    "@types/mime-types": "^2.1.1",
-    "@types/node": "^20.3.0",
-    "jest": "^29.5.0",
-    "prettier": "^2.8.8",
-    "typedoc": "^0.24.8",
-    "typescript": "^5.1.3"
+    "@types/mime-types": "^2.1.4",
+    "@types/node": "^20.12.12",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "typedoc": "^0.25.13",
+    "typescript": "^5.4.5"
   }
 }
