--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chef-core",
-  "version": "4.0.1",
+  "version": "4.1.0",
   "description": "chef-js core functionalities",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -25,9 +25,12 @@
   "scripts": {
     "prebuild": "rm -rf dist",
     "build": "tsc",
-    "build:docs": "typedoc --customCss typedoc.css",
+    "build:docs": "typedoc",
+    "pretest": "yarn build",
     "test": "jest",
-    "precommit": "yarn build && yarn build:docs && prettier . --write"
+    "format": "prettier . --write",
+    "precommit": "yarn test && yarn build:docs && yarn format",
+    "amend": "yarn precommit && git commit -a --am --no-edit"
   },
   "repository": "git://github.com/chef-js/core.git",
   "author": "Jacek Pietal <Prozi>",
@@ -47,11 +50,14 @@
     "mime-types": "^3.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.1",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^22.15.3",
+    "eslint": "^9.25.1",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "typedoc": "^0.28.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.1"
   }
 }
