--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chef-core",
-  "version": "4.1.1",
+  "version": "4.1.2",
   "description": "chef-js core functionalities",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -43,8 +43,7 @@
     "terser": "^5.14.2",
     "json5": "^2.2.2",
     "semver": "^7.5.3",
-    "escodegen": "^2.1.0",
-    "express": "^4.19.2"
+    "escodegen": "^2.1.0"
   },
   "dependencies": {
     "@pietal.dev/cache": "^2.0.2",
