--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chef-core",
-  "version": "4.1.5",
+  "version": "4.1.6",
   "description": "chef-js core functionalities",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -46,6 +46,7 @@
     "escodegen": "^2.1.0"
   },
   "dependencies": {
+    "@babel/traverse": ">=7.23.2",
     "@pietal.dev/cache": "^2.0.2",
     "mime-types": "^3.0.1"
   },
